# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_editor.a

EXTRA_DIST = EditorObjGroupData.hh EditorObjGroupData.cc

libpingus_editor_a_SOURCES = \
action_window.cxx action_window.hxx \
editor.hxx		    object_manager.hxx	  start_pos.hxx \
editor_event.hxx	    object_selector.hxx   status_line.hxx \
editor_groundpiece_obj.hxx  panel.hxx		  string_reader.hxx \
editor_help_screen.hxx	    panel_icons.hxx	  surface_selector.hxx \
editor_view.hxx		    plfobj.hxx		  thumb_cache.hxx \
editorobj.hxx		    rect_editorobj.hxx	  weather_obj.hxx \
	    scroll_map.hxx \
   sprite_editorobj.hxx \
editor.cxx		    object_manager.cxx	  start_pos.cxx \
editor_event.cxx	    object_selector.cxx   status_line.cxx \
editor_groundpiece_obj.cxx  panel.cxx		  string_reader.cxx \
editor_help_screen.cxx	    panel_icons.cxx	  surface_selector.cxx \
editor_view.cxx		    plfobj.cxx		  thumb_cache.cxx \
editorobj.cxx		    rect_editorobj.cxx	  weather_obj.cxx \
    scroll_map.cxx \
  sprite_editorobj.cxx editorobj_group.hxx editorobj_group.cxx \
groundpiece_window.hxx groundpiece_window.cxx \
property_window.hxx property_window.cxx \
property_frame.hxx property_frame.cxx

# EOF #