# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_editor.a

libpingus_editor_a_SOURCES = \
	action_window.cxx action_window.hxx \
	editor_event.cxx editor_event.hxx \
	editor_groundpiece_obj.cxx editor_groundpiece_obj.hxx \
	editor_help_screen.cxx editor_help_screen.hxx \
	editor.cxx editor.hxx \
	editorobj_group.cxx editorobj_group.hxx \
	editorobj.cxx editorobj.hxx \
	editor_view.cxx editor_view.hxx \
	entrance_window.cxx entrance_window.hxx \
	exit_window.cxx exit_window.hxx \
	groundpiece_window.cxx groundpiece_window.hxx \
	level_property_window.cxx level_property_window.hxx \
	object_manager.cxx object_manager.hxx \
	object_selector.cxx object_selector.hxx \
	panel.cxx panel.hxx \
	panel_icons.cxx panel_icons.hxx \
	plfobj.cxx plfobj.hxx \
	property_frame.cxx property_frame.hxx \
	property_window.cxx property_window.hxx \
	rect_editorobj.cxx rect_editorobj.hxx \
	scroll_map.cxx scroll_map.hxx \
	selection.cxx selection.hxx \
	sprite_editorobj.cxx sprite_editorobj.hxx \
	start_pos.cxx start_pos.hxx \
	status_line.cxx status_line.hxx \
	string_reader.cxx string_reader.hxx \
	surface_selector.cxx surface_selector.hxx \
	thumb_cache.cxx thumb_cache.hxx \
	weather_obj.cxx weather_obj.hxx

# EOF #