# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_editorobjs.a

libpingus_editorobjs_a_SOURCES = \
	bumper_obj.cxx             bumper_obj.hxx \
	conveyor_belt_obj.cxx      conveyer_belt_obj.hxx \
	fake_exit_obj.cxx          fake_exit_obj.hxx \
	guillotine_obj.cxx         guillotine_obj.hxx \
	hammer_obj.cxx             hammer_obj.hxx \
	ice_block_obj.cxx	   ice_block_obj.hxx \
	info_box_obj.cxx	   info_box_obj.hxx \
	laser_exit_obj.cxx         laser_exit_obj.hxx \
	smasher_obj.cxx            smasher_obj.hxx \
	spike_obj.cxx              spike_obj.hxx \
	switch_door_obj.cxx        switch_door_obj.hxx \
        switch_door_switch_obj.cxx switch_door_switch_obj.hxx \
	teleporter_obj.cxx         teleporter_obj.hxx \
	teleporter_target_obj.cxx  teleporter_target_obj.cxx

# EOF #