# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_editorobjs.a

libpingus_editorobjs_a_SOURCES = \
	bumper_obj.cxx                  bumper_obj.hxx \
	conveyor_belt_obj.cxx           conveyer_belt_obj.hxx \
	entrance_obj.cxx		entrance_obj.hxx \
	fake_exit_obj.cxx               fake_exit_obj.hxx \
	guillotine_obj.cxx              guillotine_obj.hxx \
	groundpiece_obj.cxx             groundpiece_obj.hxx \
	hammer_obj.cxx                  hammer_obj.hxx \
	hotspot_obj.cxx			hotspot_obj.hxx \
	ice_block_obj.cxx	        ice_block_obj.hxx \
	info_box_obj.cxx	        info_box_obj.hxx \
	laser_exit_obj.cxx              laser_exit_obj.hxx \
	liquid_obj.cxx			liquid_obj.hxx \
        prefab_obj.hxx                  prefab_obj.cxx \
	smasher_obj.cxx                 smasher_obj.hxx \
	solid_color_background_obj.cxx  solid_color_background_obj.hxx \
	spike_obj.cxx                   spike_obj.hxx \
	starfield_background_obj.cxx    starfield_background_obj.hxx \
	surface_background_obj.cxx      surface_background_obj.hxx \
	switch_door_obj.cxx             switch_door_obj.hxx \
        switch_door_switch_obj.cxx      switch_door_switch_obj.hxx \
	teleporter_obj.cxx              teleporter_obj.hxx \
	teleporter_target_obj.cxx       teleporter_target_obj.cxx \
	thunderstorm_background_obj.cxx thunderstorm_background_obj.hxx

# EOF #