# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_gui.a

libpingus_gui_a_CPPFLAGS = @PINGUS_CFLAGS@
libpingus_gui_a_SOURCES = \
	cursor.cxx \
	cursor.hxx \
	display.cxx \
	display.hxx \
	game_delta.hxx \
	gui_manager.cxx \
	gui_manager.hxx \
	gui_screen.cxx \
	gui_screen.hxx \
	input_debug_screen.cxx \
	input_debug_screen.hxx \
	root_gui_manager.cxx \
	root_gui_manager.hxx \
	screen.hxx \
	screen.cxx \
	screen_manager.cxx \
	screen_manager.hxx \
	screen_ptr.cxx \
	screen_ptr.hxx \
        component.hxx \
        surface_button.cxx \
        surface_button.hxx \
        combobox.cxx \
        combobox.hxx \
	combobox_listener.hxx \
				checkbox.cxx \
				checkbox.hxx \
				checkbox_listener.hxx \
				input_box.cxx \
				input_box.hxx

# EOF #
