# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_input.a

libpingus_input_a_SOURCES =       \
        axis.hxx \
	axis_factory.hxx axis_factory.cxx \
        axis_pointer.hxx axis_pointer.cxx \
	button.hxx  \
        button_axis.hxx button_axis.cxx \
	button_factory.hxx button_factory.cxx \
	controller.hxx controller.cxx \
	inverted_axis.hxx inverted_axis.cxx \
	joystick_axis.hxx joystick_axis.cxx \
        joystick_button.hxx joystick_button.cxx \
        key_button.hxx key_button.cxx \
        key_helper.hxx key_helper.cxx \
	mouse_axis.hxx mouse_axis.cxx \
	mouse_button.hxx mouse_button.cxx \
        mouse_pointer.hxx mouse_pointer.cxx \
	multiple_axis.hxx multiple_axis.cxx \
	multiple_button.hxx multiple_button.cxx \
	multiple_pointer.hxx multiple_pointer.cxx \
        pointer.hxx \
	pointer_factory.hxx pointer_factory.cxx

# EOF #
