# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_particle.a

libpingus_particle_a_SOURCES = \
explosive_particle.hxx	particle_holder.hxx  smoke_particle.hxx \
ground_particle.hxx	pingu_particle.hxx   snow_generator.hxx \
particle.hxx		rain_generator.hxx   snow_particle.hxx \
particle_cache.hxx	rain_particle.hxx    weather_generator.hxx \
explosive_particle.cxx	particle_holder.cxx  smoke_particle.cxx \
ground_particle.cxx	pingu_particle.cxx   snow_generator.cxx \
particle.cxx		rain_generator.cxx   snow_particle.cxx \
particle_cache.cxx	rain_particle.cxx    weather_generator.cxx

## EOF ##