#  $Id: Makefile.am,v 1.6 2002/06/01 18:01:45 torangan Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingu_traps.a

EXTRA_DIST = README

libpingu_traps_a_SOURCES =           \
         smasher.cc    smasher.hh    \
         hammer.cc     hammer.hh     \
         FakeExit.cc   FakeExit.hh   \
         Spike.cc      Spike.hh      \
         Guillotine.cc Guillotine.hh \
         LaserExit.cc  LaserExit.hh  \
         Bumper.cc     Bumper.hh

#         Teleport.cc   Teleport.hh   

## EOF ##
