#  $Id: Makefile.am,v 1.10 2002/10/13 23:02:29 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_worldmap.a

libpingus_worldmap_a_SOURCES = \
graph.hxx    	    pingus.hxx	worldmap.hxx \
manager.hxx    stat.hxx \
pingus.cxx	worldmap.cxx \
manager.cxx   stat.cxx \
drawable.hxx drawable.cxx \
sprite_drawable.hxx sprite_drawable.cxx \
surface_drawable.hxx surface_drawable.cxx \
drawable_factory.hxx drawable_factory.cxx \
path_graph.hxx path_graph.cxx \
dot_factory.hxx dot_factory.cxx \
dot.hxx dot.cxx \
level_dot.hxx level_dot.cxx \
pathfinder.hxx \
path_drawable.hxx path_drawable.cxx \
graph.cxx

#node.cxx
#node.hxx
#node_data.hxx
#node_data.cxx

# EOF #