#  $Id: Makefile.am,v 1.13 2003/10/18 12:11:31 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_worldmap.a

libpingus_worldmap_a_CPPFLAGS = @PINGUS_CFLAGS@
libpingus_worldmap_a_SOURCES = \
dot.hxx dot.cxx \
dot_factory.cxx \
dot_factory.hxx \
drawable.cxx \
drawable.hxx \
drawable_factory.cxx \
drawable_factory.hxx \
graph.cxx \
graph.hxx    \
level_dot.cxx   \
level_dot.hxx   \
manager.cxx  \
manager.hxx  \
path.cxx  \
path.hxx  \
path_drawable.cxx \
path_drawable.hxx \
path_graph.cxx  \
path_graph.hxx  \
pathfinder.hxx  \
pingus.cxx   \
pingus.hxx   \
sprite_drawable.cxx \
sprite_drawable.hxx \
surface_drawable.cxx \
surface_drawable.hxx \
worldmap.cxx \
worldmap.hxx \
worldmap_story.cxx \
worlmap_story.hxx

#node.cxx
#node.hxx
#node_data.hxx
#node_data.cxx

# EOF #