#  $Id: Makefile.am,v 1.9 2002/09/15 20:33:45 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_worldobjs.a

libpingus_worldobjs_a_SOURCES = \
	bumper.cxx                 bumper.hxx        \
        conveyor_belt.cxx          conveyor_belt.hxx \
	fake_exit.cxx              fake_exit.hxx     \
	guillotine.cxx             guillotine.hxx    \
	hammer.cxx                 hammer.hxx        \
        ice_block.cxx              ice_block.hxx     \
        info_box.cxx               info_box.hxx      \
	laser_exit.cxx             laser_exit.hxx    \
	smasher.cxx                smasher.hxx       \
	solid_color_background.cxx solid_color_background.hxx \
	spike.cxx                  spike.hxx         \
        switch_door.cxx            switch_door.hxx   \
        teleporter.cxx             teleporter.hxx    \
        worldobj_group.hxx         worldobj_group.cxx

## EOF ##