#  $Id: Makefile.am,v 1.14 2002/09/21 16:52:40 torangan Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_worldobjs.a

libpingus_worldobjs_a_SOURCES = \
	bumper.cxx                     bumper.hxx                     \
        conveyor_belt.cxx              conveyor_belt.hxx              \
	fake_exit.cxx                  fake_exit.hxx                  \
	guillotine.cxx                 guillotine.hxx                 \
        groundpiece.hxx                groundpiece.cxx                \
	hammer.cxx                     hammer.hxx                     \
	hotspot.cxx		       hotspot.hxx                    \
        ice_block.cxx                  ice_block.hxx                  \
        info_box.cxx                   info_box.hxx                   \
	laser_exit.cxx                 laser_exit.hxx                 \
        rain_generator.hxx             rain_generator.cxx             \
	smasher.cxx                    smasher.hxx                    \
        snow_generator.hxx             snow_generator.cxx             \
	solid_color_background.cxx     solid_color_background.hxx     \
	spike.cxx                      spike.hxx                      \
	starfield_background.cxx       starfield_background.hxx       \
	starfield_background_stars.cxx starfield_background_stars.hxx \
	surface_background.cxx	       surface_background.hxx         \
        switch_door.cxx                switch_door.hxx                \
        teleporter.cxx                 teleporter.hxx                 \
	thunderstorm_background.cxx    thunderstorm_background.hxx    \
        worldobj_group.hxx             worldobj_group.cxx

## EOF ##