# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_worldobjsdata.a

libpingus_worldobjsdata_a_SOURCES = \
	bumper_data.cxx        bumper_data.hxx \
	conveyor_belt_data.cxx conveyor_belt_data.hxx \
	fake_exit_data.cxx     fake_exit_data.hxx \
	guillotine_data.cxx    guillotine_data.hxx \
	hammer_data.cxx        hammer_data.hxx \
	ice_block_data.cxx     ice_block_data.hxx \
	info_box_data.cxx      info_box_data.hxx \
	laser_exit_data.cxx    laser_exit_data.hxx \
	smasher_data.cxx       smasher_data.hxx \
	spike_data.cxx         spike_data.hxx  \
	switch_door_data.cxx   switch_door_data.hxx \
	teleporter_data.cxx    teleporter_data.hxx

# EOF #