# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_input_scrollers.a

libpingus_input_scrollers_a_SOURCES =       \
	axis_scroller.hxx axis_scroller.cxx \
	dummy_scroller.hxx \
	inverted_scroller.hxx inverted_scroller.cxx \
	joystick_scroller.hxx joystick_scroller.cxx \
	mouse_scroller.hxx mouse_scroller.cxx \
	multiple_scroller.hxx multiple_scroller.cxx \
	pointer_scroller.hxx pointer_scroller.cxx \
	scroller.hxx

# EOF #
